# netty-lib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PREFIX  README.md  REFERENCES.md  build-windows.cmd  build.sh  library-p2p.cmake  library.cmake  update.sh
.github/workflows/: cmake.yml
2ndparty/: CMakeLists.txt  download.sh
cmake/: Cereal.cmake
demo/: CMakeLists.txt  zhelpers.hpp
demo/available_net_interfaces/: CMakeLists.txt  main.cpp
demo/channel/: CMakeLists.txt  main.cpp
demo/discovery/: CMakeLists.txt  main.cpp
demo/enet-basic/: CMakeLists.txt  main.cpp
demo/handshake/: CMakeLists.txt
demo/iface-monitor/: CMakeLists.txt  main.cpp
demo/lazypirate/: CMakeLists.txt  client.cpp  main.cpp  server.cpp  zhelpers.hpp
demo/legacy/handshake/: Client.hpp  main.cpp
demo/meshnet/: CMakeLists.txt  main.cpp  meshnode.hpp  tag.hpp
demo/mtu/: CMakeLists.txt  main.cpp
demo/netty/: CMakeLists.txt  client_routine.hpp  main.cpp  server_routine.hpp  traits.hpp  types.hpp
demo/netty/scripts/: client.sh  common.sh  server.sh
demo/p2p/: CMakeLists.txt  main.cpp
demo/posix_sockets/: CMakeLists.txt  main.cpp  poller.hpp  tcp_client_routine.hpp  tcp_server_routine.hpp
demo/reliable-delivery/: CMakeLists.txt  main.cpp  persistent_storage.cpp  persistent_storage.hpp  reliable_delivery.hpp  reliable_delivery_engine.hpp
demo/reliable-delivery-deprecated/: CMakeLists.txt  main.cpp
demo/resolver/: CMakeLists.txt  main.cpp  tag.hpp
demo/rpc/: CMakeLists.txt  main.cpp
demo/service/: CMakeLists.txt  envelope.hpp  main.cpp  message.hpp  process.hpp  serializer.hpp  service.hpp
demo/telemetry/: CMakeLists.txt  collector.hpp  main.cpp  msgpack_serializer.cpp  msgpack_serializer.hpp  producer.hpp  qt_publisher.cpp  qt_publisher.hpp  qt_serializer.cpp  qt_serializer.hpp  qt_subscriber.cpp  qt_subscriber.hpp  visitor.hpp  zmq_publisher.hpp  zmq_subscriber.cpp  zmq_subscriber.hpp
demo/udp/: CMakeLists.txt  main.cpp  receiver_routine.hpp  sender_routine.hpp
demo/udp/scripts/: common.sh  receiver.sh  sender.sh
scripts/: build-android.sh  build-windows.cmd  build.cxx11.android.sh  build.cxx11.cmd  build.cxx11.demo.sh  build.cxx11.profiler.sh  build.cxx11.sh  build.sh
src/: client_poller.hpp  connecting_poller.hpp  error.cpp  file_transporter.cpp  ifaddrs_android.c  inet4_addr.cpp  listener_poller.hpp  listener_poller_impl.hpp  mtu_linux-obsolete.cpp  mtu_linux.cpp  network_interface.cpp  network_interface_linux.cpp  network_interface_win32.cpp  reader_poller.hpp  reader_poller_impl.hpp  regular_poller.hpp  server_poller.hpp  socket4_addr.cpp  startup.cpp  static_initializer.cpp  writer_poller.hpp  writer_poller_impl.hpp
src/enet/: client_poller.cpp  connecting_poller.cpp  enet_listener.cpp  enet_poller.cpp  enet_socket.cpp  listener_poller.cpp  reader_poller.cpp  server_poller.cpp  writer_poller.cpp
src/linux/: client_poller.cpp  connecting_poller.cpp  epoll_poller.cpp  listener_poller.cpp  netlink_monitor.cpp  netlink_socket.cpp  reader_poller.cpp  regular_poller.cpp  server_poller.cpp  writer_poller.cpp
src/openssl/: basic_handshake_pool.cpp  client_handshake_pool.cpp  listener_handshake_pool.cpp  tls_listener.cpp  tls_socket.cpp  tls_socket_impl.cpp  tls_socket_impl.hpp
src/p2p/: connection_qt5.cpp  connection_qt5.hpp  discoverer_qt5.cpp  file.cpp  file_transporter.cpp  listener_qt5.cpp  observer.cpp  remote_file_handle.hpp  remote_file_protocol.cpp  remote_file_protocol.hpp  remote_file_provider.cpp
src/posix/: client_poller.cpp  connecting_poller.cpp  inet4_addr.cpp  inet_socket.cpp  listener_poller.cpp  poll_poller.cpp  reader_poller.cpp  regular_poller.cpp  select_poller.cpp  server_poller.cpp  tcp_listener.cpp  tcp_server.cpp  tcp_socket.cpp  udp_receiver.cpp  udp_sender.cpp  udp_socket.cpp  writer_poller.cpp
src/qt5/: discovery_engine.cpp  udp_recever.cpp  udp_sender.cpp  udp_socket.cpp
src/sample/: persistent_storage.cpp  persistent_storage.hpp
src/ssl/: get_ssl_error.hpp  openssl_basic_handshake_pool.cpp  openssl_client_handshake_pool.cpp  openssl_handshake_pool.cpp  openssl_listener.cpp  openssl_listener_handshake_pool.cpp  openssl_socket.cpp  openssl_socket_impl.hpp  tls_socket_impl.hpp
src/udt/: api.cpp  (+16 more)
tests/: CMakeLists.txt  algorithm.cpp  archive.cpp  archive_traits.cpp  boolean_matrix2.hpp  chunk.cpp  colorize.hpp  engine.cpp  envelope.cpp  handshake.cpp  inet4_addr.cpp  meshnet_routing_table.cpp  meshnode.hpp  packet_serializer.cpp  posix_engine.cpp  posix_engine.hpp  pubsub.cpp  reader_pool.cpp  reliable_delivery_manager.cpp  serializer_traits.hpp  single_channel_connection.cpp  socket4_addr.cpp  telemetry.cpp  tools.hpp  udt_engine.hpp  writer_pool.cpp
tests/delivery/: manager.cpp  tools.hpp
tests/legacy/: envelope.cpp  handshake.cpp  request_reply.cpp
tests/meshnet/: CMakeLists.txt  alive.cpp  alive_controller.cpp  bit_matrix.hpp  channel.cpp  delivery.cpp  duplication.cpp  handshake.cpp  handshake_controller.cpp  heartbeat_controller.cpp  input_account.cpp  input_controller.cpp  mesh_network.cpp  mesh_network.hpp  messaging.cpp  node.hpp  node_dictionary.hpp  priority_frame.cpp  priority_tracker.cpp  priority_writer_queue.cpp  protocol.cpp  routing.cpp  routing_table.cpp  tools.hpp  transport.hpp  unreachable.cpp
tests/meshnet/legacy/: CMakeLists.txt  alive_controller.cpp  delivery.cpp  handshake.cpp  handshake_controller.cpp  heartbeat_controller.cpp  input_controller.cpp  mesh_network.hpp  messaging.cpp  priority_frame.cpp  priority_tracker.cpp  priority_writer_queue.cpp  protocol.cpp  routing_table.cpp  transport.hpp  unreachable.cpp
tests/meshnet_patterns/: CMakeLists.txt  delivery.cpp  mesh_network.hpp  messaging.cpp  protocol.cpp  unreachable.cpp
tests/patterns/: delivery.cpp  mesh_network.hpp  messaging.cpp  priority_tracker.cpp  transport.hpp
tests/pubsub/: CMakeLists.txt  frame.cpp  input_controller.cpp  pubsub.cpp  writer_queue.cpp
tests/ssl/: CMakeLists.txt  README.txt  cert.pem  key.pem  ssl.cpp
tests/telemetry/: CMakeLists.txt  telemetry.cpp
tests/telemetry_patterns/: telemetry.cpp
(+378 files in other folders)
